/*
** Copyright 2022-2023 Centreon
**
** Licensed under the Apache License, Version 2.0 (the "License");
** you may not use this file except in compliance with the License.
** You may obtain a copy of the License at
**
**     http://www.apache.org/licenses/LICENSE-2.0
**
** Unless required by applicable law or agreed to in writing, software
** distributed under the License is distributed on an "AS IS" BASIS,
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
** See the License for the specific language governing permissions and
** limitations under the License.
**
** For more information : contact@centreon.com
*/

syntax = "proto3";

import "state-generated.proto";

package com.centreon.engine.configuration;

enum DateType {
  us = 0;              // U.S. (MM-DD-YYYY HH:MM:SS)
  euro = 1;            // European (DD-MM-YYYY HH:MM:SS)
  iso8601 = 2;         // ISO8601 (YYYY-MM-DD HH:MM:SS)
  strict_iso8601 = 3;  // ISO8601 (YYYY-MM-DDTHH:MM:SS)
}

message InterCheckDelay {
  enum IcdType {
    none = 0;   // no inter-check delay
    dumb = 1;   // dumb delay of 1 second
    smart = 2;  // smart delay
    user = 3;   // user-specified delay
  }
  IcdType type = 1;
  double user_value = 2;
}

enum InterleaveFactor {
  ilf_user = 0;   // user-specified interleave factor
  ilf_smart = 1;  // smart interleave
}

message SchedInfoConfig {
  double host_inter_check_delay = 1;
  double service_inter_check_delay = 2;
  int32 service_interleave_factor = 3;
}

message State {
  string cfg_main = 1;
  repeated string cfg_file = 2;
  repeated string resource_file = 3;
  int32 instance_heartbeat_interval = 4;
  bool check_service_freshness = 5;
  bool enable_flap_detection = 6;
  string rpc_listen_address = 7;
  uint32 grpc_port = 8;
  map<string, string> users = 9;
  repeated string cfg_dir = 10;
  string state_retention_file = 11;
  repeated string broker_module = 12;
  string broker_module_directory = 13;
  bool enable_macros_filter = 14;
  StringSet macros_filter = 15;

  bool log_v2_enabled = 16;
  bool log_legacy_enabled = 17;
  bool use_syslog = 18;
  string log_v2_logger = 19;
  string log_file = 20;
  string debug_file = 21;
  uint32 debug_level = 22;
  uint32 debug_verbosity = 23;
  uint32 max_debug_file_size = 24;
  bool log_pid = 25;
  bool log_file_line = 26;
  int32 log_flush_period = 27;
  string log_level_checks = 28;
  string log_level_commands = 29;
  string log_level_comments = 30;
  string log_level_config = 31;
  string log_level_downtimes = 32;
  string log_level_eventbroker = 33;
  string log_level_events = 34;
  string log_level_external_command = 35;
  string log_level_functions = 36;
  string log_level_macros = 37;
  string log_level_notifications = 38;
  string log_level_process = 39;
  string log_level_runtime = 40;

  string global_host_event_handler = 41;
  string global_service_event_handler = 42;
  string illegal_object_chars = 43;
  string illegal_output_chars = 44;
  uint32 interval_length = 45;
  string ochp_command = 46;
  string ocsp_command = 47;
  string use_timezone = 48;
  bool accept_passive_host_checks = 49;
  bool accept_passive_service_checks = 50;
  int32 additional_freshness_latency = 51;
  uint32 cached_host_check_horizon = 52;
  bool check_external_commands = 53;
  bool check_host_freshness = 54;
  uint32 check_reaper_interval = 55;
  bool enable_event_handlers = 56;
  bool enable_notifications = 57;
  bool execute_host_checks = 58;
  bool execute_service_checks = 59;
  uint32 max_host_check_spread = 60;
  uint32 max_service_check_spread = 61;
  uint32 notification_timeout = 62;
  bool obsess_over_hosts = 63;
  bool obsess_over_services = 64;
  bool process_performance_data = 65;
  bool soft_state_dependencies = 66;
  bool use_large_installation_tweaks = 67;
  string admin_email = 68;
  string admin_pager = 69;
  bool allow_empty_hostgroup_assignment = 70;
  string command_file = 71;
  string status_file = 72;
  string poller_name = 73;
  uint32 poller_id = 74;
  bool auto_reschedule_checks = 75;
  uint32 auto_rescheduling_interval = 76;
  uint32 auto_rescheduling_window = 77;
  uint32 cached_service_check_horizon = 78;
  bool check_orphaned_hosts = 79;
  bool check_orphaned_services = 80;
  int32 command_check_interval = 81;
  bool command_check_interval_is_seconds = 82;
  bool enable_environment_macros = 83;
  uint32 event_broker_options = 84;
  uint32 event_handler_timeout = 85;
  int32 external_command_buffer_slots = 86;
  float high_host_flap_threshold = 87;
  float high_service_flap_threshold = 88;
  int32 host_check_timeout = 89;
  uint32 host_freshness_check_interval = 90;
  uint32 service_freshness_check_interval = 91;
  bool log_event_handlers = 92;
  bool log_external_commands = 93;
  bool log_notifications = 94;
  bool log_passive_checks = 95;
  bool log_host_retries = 96;
  bool log_service_retries = 97;
  uint32 max_log_file_size = 98;
  float low_host_flap_threshold = 99;
  float low_service_flap_threshold = 100;
  uint32 max_parallel_service_checks = 101;
  uint32 ochp_timeout = 102;
  uint32 ocsp_timeout = 103;
  int32 perfdata_timeout = 104;
  uint32 retained_host_attribute_mask = 105;
  uint32 retained_process_host_attribute_mask = 106;
  uint32 retained_contact_host_attribute_mask = 107;
  uint32 retained_contact_service_attribute_mask = 108;
  bool retain_state_information = 109;
  uint32 retention_scheduling_horizon = 110;
  uint32 retention_update_interval = 111;
  uint32 service_check_timeout = 112;
  float sleep_time = 113;
  uint32 status_update_interval = 114;
  uint32 time_change_threshold = 115;
  bool use_regexp_matches = 116;
  bool use_retained_program_state = 117;
  bool use_retained_scheduling_info = 118;
  bool use_setpgid = 119;
  bool use_true_regexp_matching = 120;
  DateType date_format = 121;
  InterCheckDelay host_inter_check_delay_method = 122;
  InterCheckDelay service_inter_check_delay_method = 123;
  InterleaveFactor service_interleave_factor_method = 124;
  bool enable_predictive_host_dependency_checks = 125;
  bool enable_predictive_service_dependency_checks = 126;
  string host_perfdata_command = 127;
  string service_perfdata_command = 128;

  SchedInfoConfig scheduling_info_config = 129;

  repeated Command commands = 130;
  repeated Connector connectors = 131;
  repeated Contact contacts = 132;
  repeated Contactgroup contactgroups = 133;
  repeated Hostdependency hostdependencies = 134;
  repeated Hostescalation hostescalations = 135;
  repeated Hostgroup hostgroups = 136;
  repeated Host hosts = 137;
  repeated Servicedependency servicedependencies = 138;
  repeated Serviceescalation serviceescalations = 139;
  repeated Servicegroup servicegroups = 140;
  repeated Service services = 141;
  repeated Anomalydetection anomalydetections = 142;
  repeated Timeperiod timeperiods = 143;
  repeated Severity severities = 144;
  repeated Tag tags = 145;
  map<string, string> user = 146;
}

message Value {
  oneof value {
    bool value_b = 1;
    int32 value_i32 = 2;
    uint32 value_u32 = 3;
    string value_str = 4;
    TimeRange value_tr = 5;
    Daterange value_dr = 6;
    Timeperiod value_tp = 7;
    Connector value_cn = 8;
    Command value_co = 9;
    CustomVariable value_cv = 10;
    Contact value_ct = 11;
  }
}

message Key {
  oneof key {
    int32 i32 = 1;
    string str = 2;
  }
}

message Path {
  repeated Key key = 1;
}

message PathWithValue {
  Path path = 1;
  Value val = 2;
}

message PathWithPair {
  Path path = 1;
  Value val1 = 2;
  Value val2 = 3;
}

message DiffState {
  repeated PathWithValue to_add = 1;
  repeated Path to_remove = 2;
  repeated PathWithValue to_modify = 3;
}
